...
            styles.sectionTitle,
            {color: getColor(Colors.text.secondary, isDarkMode)},
          ]}>
          Recent Transactions
        </Text>
        {hasTransactions && (
          <TouchableOpacity testID="button-clear-all" onPress={onClearAll}>
            <Text style={styles.clearAllText}>Clear all</Text>
          </TouchableOpacity>
        )}
      </View>
    </>
  ),
...
  return (
    <SafeAreaView style={backgroundStyle}>
      <View style={styles.screen}>
        <StatusBar barStyle={isDarkMode ? 'light-content' : 'dark-content'} />

        <FlatList
          testID="transaction-list"
          data={expenses}
          renderItem={renderItem}
          keyExtractor={keyExtractor}
          keyboardShouldPersistTaps="handled"
          ListHeaderComponent={listHeaderComponent}
          ListEmptyComponent={emptyComponent}
...
